:memo: Docs: llm

--- a/docs/node/docs/pages/index.mdx
+++ b/docs/node/docs/pages/index.mdx
@@ -11,7 +11,10 @@ import { HomePage } from 'vocs/components'
   <HomePage.Description>An in browser ethereum node for JavaScript</HomePage.Description>
   <HomePage.Buttons>
     <HomePage.Button href="/getting-started" variant="accent">Get started</HomePage.Button>
-    <HomePage.Button href="/examples/viem">Usage With Viem</HomePage.Button>
+    <HomePage.Button href="/examples/viem">Viem Guide</HomePage.Button>
     <HomePage.Button href="https://github.com/evmts/tevm-monorepo">GitHub</HomePage.Button>
   </HomePage.Buttons>
+  <HomePage.Description>
+    Here's our [documentation as plain text](https://node.tevm.sh/llms.txt) for providing context to LLMs
+  </HomePage.Description>
 </HomePage.Root>
